Added : documents list (new mdl control)

--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/pages/shared/_Main.Master
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/pages/shared/_Main.Master
@@ -25,9 +25,14 @@
 
 
     <!-- general styles -->
-    <link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css" />
+    <%--<link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css" />--%>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.indigo-pink.min.css" />
     <link rel="stylesheet" href="../../Content/jDialog/jDialog.css" />
     <link rel="stylesheet" href="../../Content/Site.css" />
+
+    
+    
+
 
     <%--    <link rel="stylesheet" href="../../Content/modal/modal.css" />--%>
 
@@ -155,7 +160,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 
     <!-- mdl scripts -->
-    <script type="text/javascript" src="../../Content/mdl-v1.0.5/material.min.js"></script>
+    <%--<script type="text/javascript" src="../../Content/mdl-v1.0.5/material.min.js"></script>--%>
+    <script type="text/javascript" defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
+
 
     <!-- dialog box -->
     <script type="text/javascript" src="../../Content/jDialog/jDialog.js"></script>
