--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/Site.css
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/Site.css
@@ -179,8 +179,8 @@ html, body {
 
 
 /* +--------------------------------------------------------------+ *
- * | #LOGIN BLOCK - (main) (.mdl-layout__content) -                      | *
- * |         - display login form                         | *
+ * | #LOGIN BLOCK - (main) (.mdl-layout__content) -               | *
+ * |         - display login form                                 | *
  * +--------------------------------------------------------------+ */
 
 .login-block {
@@ -191,6 +191,12 @@ html, body {
 
     /*border: 1px solid black;*//*#EBEBEB;*/
 }
+
+    .login-block .login-block__label--error {
+        position: absolute;
+        margin-top: 5px;
+        color: red;   
+    }
 
 .login-block .login-block__icon {
     font-size: 60px; 
