--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/Site.css
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/Content/Site.css
@@ -575,3 +575,66 @@ _:-ms-input-placeholder, :root .nos-graph {
 	 margin-right: 10px;
      /*padding-right: 10px;*/
 }
+
+
+/*.page-wrap {
+  min-height: 100%;
+  margin-bottom: -100px; 
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+.docs-footer.mdl-mini-footer {
+    height: 100px; 
+}*/
+
+/* sticky footer */
+/*.docs-footer.mdl-mini-footer, .docs-footer.mdl-mini-footer ul, .docs-layout-content > .download {
+    -webkit-justify-content: center;
+              -ms-flex-pack: center;
+            justify-content: center;
+}
+
+.docs-footer.mdl-mini-footer {
+    -ms-grid-row-align: stretch;
+    height: 120px;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-items: stretch;
+         -ms-flex-align: stretch;
+            align-items: stretch;
+}
+
+    .docs-footer.mdl-mini-footer ul {
+        padding: 0;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-align-items: center;
+             -ms-flex-align: center;
+                align-items: center;
+    }
+
+        .docs-footer.mdl-mini-footer ul > li > a {
+            margin: 0 8px;
+            font-weight: 400;
+            font-size: 12px;
+        }
+
+.docs-footer .docs-link-list li {
+    margin-left: .5em;
+    margin-right: .5em;
+}*/
+
+
+
+.default-content.mdl-layout__content,
+.default-footer.mdl-mini-footer {
+    flex: 1 0 auto
+}
