--- a/Nosology.MVP/Nosology.MVP.UI.WebApp/pages/shared/_Default.Master
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp/pages/shared/_Default.Master
@@ -24,12 +24,15 @@
     <!--<link rel="shortcut icon" href="images/favicon.png">-->
 
 
-    <!-- general styles -->
+    <!-- mdl styles -->
     <link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.cyan-teal.min.css" />
-    <link rel="stylesheet" href="../../Content/jDialog/jDialog.min.css" />
-    <link rel="stylesheet" href="../../Content/Site.css" />
     
+    
+    <!-- custom styles -->
+    <link rel="stylesheet" href="../../Content/Site.css" />
+    <link rel="stylesheet" href="../../Content/jDialog/jDialog.min.css" />
+
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -37,7 +40,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
 
 
-    <title></title>
+    <title>Высокозатратные нозологии</title>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
 
@@ -47,23 +50,27 @@
 
 <body>
 
-    <!-- #LAYOUT -->
-    <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+    <div class="mdl-layout__container">
+        <!-- #LAYOUT -->
+        <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
         
-        <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--nos-main mdl-color-text--white">
-            <div class="mdl-layout__header-row">
-                <span class="mdl-layout-title">Высокозатратные нозологии</span>
-            </div>
-        </header>
+            <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--nos-main mdl-color-text--white">
+                <div class="mdl-layout__header-row">
+                    <span class="mdl-layout-title">Высокозатратные нозологии</span>
+                </div>
+            </header>
       
-        <main class="mdl-layout__content">
-            <asp:ContentPlaceHolder ID="BodyPlaceHolder" runat="server">
-            
-            </asp:ContentPlaceHolder>
+            <main class="default-content mdl-layout__content">
 
-             <!-- #FOOTER -->
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer--left-section" >
+                <asp:ContentPlaceHolder ID="BodyPlaceHolder" runat="server">
+            
+                </asp:ContentPlaceHolder>
+
+            </main>
+
+            <!-- #FOOTER -->
+            <footer class="default-footer mdl-mini-footer">
+                <div class="mdl-mini-footer--left-section">
 
                     <div class="mdl-logo">
                         <a href="http://www.escyug.ru/">
@@ -78,10 +85,15 @@
                 </div>
             </footer><!-- / #FOOTER -->
 
-        </main>
-        
-    </div><!-- / #LAYOUT -->
-    
+        </div><!-- / #LAYOUT -->
+
+    </div>
+
+    <!--[if IE]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <![endif]-->
 
     <!-- jQuery library -->
     <script type="text/javascript" src="../../Scripts/jquery-1.10.2.min.js"></script>
@@ -92,12 +104,6 @@
     <asp:ContentPlaceHolder ID="ScriptContentPlaceHolder" runat="server">
         <!-- particular page scripts goes here -->
     </asp:ContentPlaceHolder>
-
-    <!--[if IE]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-    <![endif]-->
 
 </body>
 
