--- a/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Content/Site.css
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Content/Site.css
@@ -188,8 +188,6 @@ html, body {
     width: 250px;
     margin: 10em auto;
     padding: 3rem 5rem;
-
-    /*border: 1px solid black;*//*#EBEBEB;*/
 }
 
     .login-block .login-block__label--error {
@@ -558,9 +556,10 @@ _:-ms-input-placeholder, :root .demo-graph {
         color: #d9006e;
     }
 
-/* TODO: Find a proper solution to have the graphs
- * not float around outside their container in IE10/11.
- * Using a browserhacks.com solution for now.
+/** TODO: 
+ *    1. Find a proper solution to have the graphs
+ *       not float around outside their container in IE10/11.
+ *       Using a browserhacks.com solution for now.
  */
 
 _:-ms-input-placeholder, :root .nos-graphs {
@@ -575,20 +574,6 @@ _:-ms-input-placeholder, :root .nos-graph {
 	 margin-right: 10px;
      /*padding-right: 10px;*/
 }
-
-
-/*.page-wrap {
-  min-height: 100%;
-  margin-bottom: -100px; 
-}
-.page-wrap:after {
-  content: "";
-  display: block;
-}
-
-.docs-footer.mdl-mini-footer {
-    height: 100px; 
-}*/
 
 /* sticky footer */
 /*.docs-footer.mdl-mini-footer, .docs-footer.mdl-mini-footer ul, .docs-layout-content > .download {
@@ -631,8 +616,6 @@ _:-ms-input-placeholder, :root .nos-graph {
     margin-left: .5em;
     margin-right: .5em;
 }*/
-
-
 
 .default-content.mdl-layout__content,
 .default-footer.mdl-mini-footer {
