--- a/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/pages/shared/_Main.Master
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/pages/shared/_Main.Master
@@ -31,16 +31,15 @@
     <link rel="stylesheet" href="../../Content/Site.css" />
 
     
-    <%--<link rel="stylesheet" href="../../Content/modal/modal.css" />--%>
-
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
 
-    <title></title>
+    <title>Высокозатратные нозологии</title>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
+
     </asp:ContentPlaceHolder>
 
 </head>
@@ -150,22 +149,21 @@
         </main>
 
     </div>
+    
+    <!--[if IE]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <![endif]-->
 
     <!-- jQuery library -->
     <script type="text/javascript" src="../Scripts/jquery-1.10.2.min.js"></script>
 
-    <!-- ajax library -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-
     <!-- mdl scripts -->
-    <%--<script type="text/javascript" src="../../Content/mdl-v1.0.5/material.min.js"></script>--%>
     <script type="text/javascript" defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
-
 
     <!-- dialog box -->
     <script type="text/javascript" src="../Content/jDialog/jDialog.js"></script>
-
-    <%--<script type="text/javascript" src="../../Content/modal/modal.js"></script>--%>
 
     <!-- shows up contact info dialog window (side menu in #HEADER) -->
     <script type="text/javascript">
@@ -190,12 +188,6 @@
     <asp:ContentPlaceHolder ID="ScriptContentPlaceHolder" runat="server">
         <!-- particular page scripts goes here -->
     </asp:ContentPlaceHolder>
-
-    <!--[if IE]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-    <![endif]-->
 
 </body>
 
