Updates : lib (ninject, WebGrease). Deleted : bootstrap. Added : mdl

--- a/src/Nosology.Web.App/Views/Home/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Home/Index.cshtml
@@ -2,30 +2,33 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="mdl-grid mdl-grid--no-spacing">
+    <!-- #SPACER -->
+    <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
+    <!-- #MAIN CELL -->
+    <div class="mdl-cell mdl-cell--10-col mdl-cell--middle">
+        <div class="login-block mdl-shadow--2dp">
+            <i class="fa fa-user-md mdl-color-text--nos-main login-block__icon"></i>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="loginInput" onfocus="clearError();" />
+                <label class="mdl-textfield__label" for="loginInput">Логин...</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="password" id="pwdInput" onfocus="clearError();" />
+                <label class="mdl-textfield__label" for="pwdInput">Пароль...</label>
+            </div>
+            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="persistCheckBox">
+                <input type="checkbox" id="persistCheckBox" class="mdl-checkbox__input" />
+                <span class="mdl-checkbox__label">Запомнить?</span>
+            </label>
+            @*<asp:Label ID="errorLabel" CssClass="login-block__label--error" runat="server" Text=""></asp:Label>*@
+            <button id="checkButton" onclick="login()"
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
+                        mdl-button--colored mdl-color-text--white mdl-color--nos-main login-block__button">
+                ВХОД
+            </button>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    <!-- #SPACER -->
+    <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
 </div>
