--- a/src/Nosology.Web.App/Content/Site.css
+++ b/src/Nosology.Web.App/Content/Site.css
@@ -1,24 +1,623 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿/**
+ * CONTENTS
+ *
+ * 
+ *
+ * GENERIC
+ * Normalize.css........A level playing field.
+ * Box-sizing...........Better default `box-sizing`.
+ *
+ * BASE
+ * Headings.............H1–H6 styles.
+ *
+ * OBJECTS
+ * Wrappers.............Wrapping and constraining elements.
+ *
+ * COMPONENTS
+ * Page-head............The main page header.
+ * Page-foot............The main page footer.
+ * Buttons..............Button elements.
+ *
+ * TRUMPS
+ * Text.................Text helpers.
+ */
+
+
+
+
+
+
+/*-------------------------------------------------------*\
+    #GLOBAL - SECTION
+\*-------------------------------------------------------*/
+
+
+html, body {
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+
+
+
+
+/*------------------------------------------------------*\
+    #COLOR - SECTION - set main, help and subhelp colors
+\*------------------------------------------------------*/
+
+/* +-----------------------------------------+ *
+ * |   #00838F; #0097A7; #00BCD4; #37474F;   | *
+ * +-----------------------------------------+ */
+
+.mdl-color-text--nos-main {
+  color: rgb(0,131,143) !important; }
+
+.mdl-color--nos-main {
+  background-color: rgb(0,131,143) !important; }
+
+.mdl-color-text--nos-help {
+  color: rgb(0,151,167) !important; }  
+
+.mdl-color--nos-help {
+  background-color: rgb(0,151,167) !important; }
+
+.mdl-color--nos-subhelp {
+  background-color: rgb(19, 202, 233) !important; }
+
+
+
+
+
+/*-------------------------------------------------------*\
+    #MDL - SECTION
+\*-------------------------------------------------------*/
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display titles                                   | *
+ * +--------------------------------------------------------------+ */
+
+/* change font size of main title on small screens */
+.mdl-layout.is-small-screen .mdl-layout-title {
+    font-size: 18px;
+ }
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display site default title                       | *
+ * +--------------------------------------------------------------+ */
+
+/* row that contains main title on default page (login, error) */
+.header-row--default {
+    padding-left: 55px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.header-row--helper {
+    height: 35px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+    .header-row--helper span {
+        padding-left : 10px;
+    }
+
+
+/* +--------------------------------------------------------------+ *
+ * | #TEXTFIELD - (.mdl-textfield) -                              | *
+ * |                  - input textboxes (login, pwd)              | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label,
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
+    color: rgb(0,131,143); 
+    font-size: 12px;  
+    top: 4px;
+    visibility: visible; 
+}
+
+.mdl-textfield--floating-label.is-focused .mdl-textfield__expandable-holder .mdl-textfield__label,
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__expandable-holder .mdl-textfield__label {
+    top: -16px; 
+}
+
+.mdl-textfield--floating-label.is-invalid .mdl-textfield__label {
+    color: rgb(222, 50, 38);
+    font-size: 12px; 
+}
+
+.mdl-textfield__label:after {
+    background-color: rgb(0,131,143); 
+    content: '';
+    position: absolute;
+    height: 2px;
+    width:  10px; 
+    left:   45%;
+    bottom: 20px;
+    -webkit-transition-duration: 0.2s;
+       -moz-transition-duration: 0.2s;
+            transition-duration: 0.2s;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+       -moz-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: hidden;
+}
+
+
+
+
+/*-------------------------------------------------------*\
+    #DEFAULT LAYOUT - SECTION
+\*-------------------------------------------------------*/
+
+/* +--------------------------------------------------------------+ *
+ * | #FOOTER - (.mdl-mini-footer) -                               | *      
+ * |            - show company title and useble links             | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-logo a {
+    color: white;
+    text-decoration: none;
+}
+
+.mdl-logo i {
+    font-size: 25px;
+}
+
+@media (max-width: 480px) {
+    .mdl-logo i {
+        font-size: 20px;
+    }
+
+}
+
+
+
+
+
+/*-------------------------------------------------------*\
+    #DEFAULT_PAGE - SECTION
+\*-------------------------------------------------------*/
+
+
+/* +--------------------------------------------------------------+ *
+ * | #LOGIN BLOCK - (main) (.mdl-layout__content) -               | *
+ * |         - display login form                                 | *
+ * +--------------------------------------------------------------+ */
+
+.login-block {
+    background: #FAFAFA;
+    width: 250px;
+    margin: 10em auto;
+    padding: 3rem 5rem;
+}
+
+    .login-block .login-block__label--error {
+        position: absolute;
+        margin-top: 5px;
+        color: red;   
+    }
+
+.login-block .login-block__icon {
+    font-size: 60px; 
+    padding: 1rem 7.5rem
+}
+
+@media (max-width: 480px) {
+    .login-block {
+        width: 200px;
+    }
+
+    .login-block .login-block__icon {
+        padding: 2rem 6rem
+    }
+}
+
+.login-block__button {
+    width : 100px;
+    margin-top: 3rem;
+}
+
+
+
+
+
+/*-------------------------------------------------------*\
+    #MAIN LAYOUT - SECTION
+\*-------------------------------------------------------*/
+
+
+
+.demo-avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+}
+.demo-layout .demo-header .mdl-textfield {
+  padding: 0px;
+  margin-top: 41px;
+}
+.demo-layout .demo-header .mdl-textfield .mdl-textfield__expandable-holder {
+  bottom: 19px;
+}
+.demo-layout .mdl-layout__header .mdl-layout__drawer-button {
+    padding-top: 2px;
+    color: rgba(0, 0, 0, 0.54);
+  
+}
+.mdl-layout__drawer .avatar {
+  margin-bottom: 16px;
+}
+.demo-drawer {
+  border: none;
+}
+/* iOS Safari specific workaround */
+.demo-drawer .mdl-menu__container {
+  z-index: -1;
+}
+.demo-drawer .demo-navigation {
+  z-index: -2;
+}
+/* END iOS Safari specific workaround */
+.demo-drawer .mdl-menu .mdl-menu__item {
+  display: flex;
+  align-items: center;
+}
+.demo-drawer-header {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 16px;
+  height: 151px;
+}
+.demo-avatar-dropdown {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+
+.demo-navigation {
+  flex-grow: 1;
+}
+.demo-layout .demo-navigation .mdl-navigation__link {
+  display: flex !important;
+  flex-direction: row;
+  align-items: center;
+  color: rgba(255, 255, 255, 0.56);
+  font-weight: 500;
+}
+.demo-layout .demo-navigation .mdl-navigation__link:hover {
+  background-color: rgba(255, 255, 255, 0.25);/*#00BCD4;*/
+  color: #37474F;
+}
+.demo-navigation .mdl-navigation__link .material-icons {
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.56);
+  margin-right: 32px;
+}
+
+.demo-content {
+  max-width: 1080px;
+}
+
+.demo-charts {
+  align-items: center;
+}
+.demo-chart:nth-child(1) {
+  color: #ACEC00;
+}
+.demo-chart:nth-child(2) {
+  color: #00BBD6;
+}
+.demo-chart:nth-child(3) {
+  color: #BA65C9;
+}
+.demo-chart:nth-child(4) {
+  color: #EF3C79;
+}
+.demo-graphs {
+  padding: 16px 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+/* TODO: Find a proper solution to have the graphs
+ * not float around outside their container in IE10/11.
+ * Using a browserhacks.com solution for now.
+ */
+_:-ms-input-placeholder, :root .demo-graphs {
+  min-height: 664px;
+}
+_:-ms-input-placeholder, :root .demo-graph {
+  max-height: 300px;
+}
+/* TODO end */
+.demo-graph:nth-child(1) {
+  color: #00b9d8;
+}
+.demo-graph:nth-child(2) {
+  color: #d9006e;
+}
+
+.demo-cards {
+  align-items: flex-start;
+  align-content: flex-start;
+}
+.demo-cards .demo-separator {
+  height: 32px;
+}
+.demo-cards .mdl-card__title.mdl-card__title {
+  color: white;
+  font-size: 24px;
+  font-weight: 400;
+}
+.demo-cards ul {
+  padding: 0;
+}
+.demo-cards h3 {
+  font-size: 1em;
+}
+.demo-updates .mdl-card__title {
+  min-height: 200px;
+  background-image: url('images/dog.png');
+  background-position: 90% 100%;
+  background-repeat: no-repeat;
+}
+.demo-cards .mdl-card__actions a {
+  color: #00BCD4;
+  text-decoration: none;
+}
+
+.demo-options h3 {
+  margin: 0;
+}
+.demo-options .mdl-checkbox__box-outline {
+  border-color: rgba(255, 255, 255, 0.89);
+}
+.demo-options ul {
+  margin: 0;
+  list-style-type: none;
+}
+.demo-options li {
+  margin: 4px 0;
+}
+.demo-options .material-icons {
+  color: rgba(255, 255, 255, 0.89);
+}
+.demo-options .mdl-card__actions {
+  height: 64px;
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+}
+
+
+
+ .mdl-navigation__link .link__icon {
+    font-size: 24px;
+    color: white;/*rgba(255, 255, 255, 0.56);*/
+    margin-right: 32px;
+}
+
+
+ /*-------------------------------------------------------*\
+    #MAIN_PAGE - SECTION
+\*-------------------------------------------------------*/
+
+
+/* +--------------------------------------------------------------+ *
+ * | #HEADER - (.mdl-layout__header) -                            | *
+ * |           - display titles                                   | *
+ * +--------------------------------------------------------------+ */
+
+/* row that contains user level label */
+.header-row--helper {
+    padding: 0 16px 0 15px;
+}
+
+@media (max-width: 480px) {
+    .header-row--helper {
+        font-size: 12px;
+    }
+}
+
+/* search box */
+.mdl-layout .mdl-layout__header .mdl-textfield {
+    padding-top: 27px;
+}
+
+/* items in context menu */
+.mdl-menu .mdl-menu__item {
+    display: flex;
+    align-items: center;
+}
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER - (.mdl-layout__drawer) -                            | *
+ * |           - side panel menu, contains navigation bar         | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-layout__drawer {
+    border: none;
+}
+    /* user avatar */
+    .mdl-layout__drawer .avatar {
+      margin-bottom: 16px;
+    }
+
+.mdl-drawer__header {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 16px;
+    height: 151px;
+}
+
+.mdl-drawer__header .user-avatar-dropdown {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+/* iOS Safari specific workaround */
+.mdl-layout__drawer .mdl-menu__container {
+    z-index: -1;
+}
+
+.mdl-layout__drawer .nos-navigation {
+    z-index: -2;
+}
+/* END iOS Safari specific workaround */
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER_NAVIGATION - (.mdl-navigation) (.mdl-layout__drawer) | *
+ * |                      - navigation bar in drawer              | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-layout__drawer .mdl-navigation {
+  flex-grow: 1;
+  background-color:#0097A7;
+}
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+    display: flex !important;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    font-weight: 500;
+}
+    .mdl-layout__drawer .mdl-navigation .mdl-navigation__link .nav-icon {
+        font-size: 24px;
+        color: white;/*rgba(255, 255, 255, 0.56);*/
+        margin-right: 32px;
+    }
+
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
+    background-color :#00838F;  
+    color: white;
+}
+
+.nav-icon {
+	margin-right: 30px;
+	margin-left: 5px;
+}
+
+
+
+/* +--------------------------------------------------------------+ *
+ * | #DRAWER-BUTTON - (.mdl-layout__drawer-button) -              | *
+ * |                  - menu button shows only on small screens   | *
+ * +--------------------------------------------------------------+ */
+
+.mdl-layout__drawer-button {
+    padding-top : 11px;
+    color: rgba(0, 0, 0, 0.54);
+}
+
+.mdl-layout__drawer-button i {
+    color: rgba(0, 0, 0, 0.54);
+}
+
+
+.nos-content {
+    max-width: 1080px;
+}
+	.nos-content a {
+		text-decoration: none;
+		color: rgba(0, 0, 0, 0.54);
+	}
+	
+.nos-docs a {
+	text-decoration: underline;	
+}
+	
+.nos-docs a:hover {
+	text-decoration: none;
+	/*color: #0097A7;*/
+}
+	
+.nos-graphs {
+    padding: 16px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+    .nos-graph:nth-child(1) {
+        color: #00b9d8;
+    }
+    .nos-graph:nth-child(2) {
+        color: #d9006e;
+    }
+
+/** TODO: 
+ *    1. Find a proper solution to have the graphs
+ *       not float around outside their container in IE10/11.
+ *       Using a browserhacks.com solution for now.
+ */
+
+_:-ms-input-placeholder, :root .nos-graphs {
+  min-height: 664px;
+}
+_:-ms-input-placeholder, :root .nos-graph {
+  max-height: 300px;
+}
+/* TODO end */
+
+.content-icon {
+	 margin-right: 10px;
+     /*padding-right: 10px;*/
+}
+
+/* sticky footer */
+/*.docs-footer.mdl-mini-footer, .docs-footer.mdl-mini-footer ul, .docs-layout-content > .download {
+    -webkit-justify-content: center;
+              -ms-flex-pack: center;
+            justify-content: center;
+}
+
+.docs-footer.mdl-mini-footer {
+    -ms-grid-row-align: stretch;
+    height: 120px;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-items: stretch;
+         -ms-flex-align: stretch;
+            align-items: stretch;
+}
+
+    .docs-footer.mdl-mini-footer ul {
+        padding: 0;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-align-items: center;
+             -ms-flex-align: center;
+                align-items: center;
+    }
+
+        .docs-footer.mdl-mini-footer ul > li > a {
+            margin: 0 8px;
+            font-weight: 400;
+            font-size: 12px;
+        }
+
+.docs-footer .docs-link-list li {
+    margin-left: .5em;
+    margin-right: .5em;
+}*/
+
+.default-content.mdl-layout__content,
+.default-footer.mdl-mini-footer {
+    flex: 1 0 auto
 }
