--- a/src/Nosology.Web.App/Views/Shared/_Default.cshtml
+++ b/src/Nosology.Web.App/Views/Shared/_Default.cshtml
@@ -18,17 +18,15 @@
 
     <meta name="msapplication-TileColor" content="#3372DF" />
 
-    <title>@ViewBag.Title – приложение ASP.NET</title>
+    <title>@ViewBag.Title – "Высокозатратные нозологии"</title>
+
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
-
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.cyan-teal.min.css" />
 
 </head>
 
@@ -46,6 +44,7 @@
             <main class="default-content mdl-layout__content">
                 @RenderBody()
             </main>
+
             <!-- #FOOTER -->
             <footer class="default-footer mdl-mini-footer">
                 <div class="mdl-mini-footer--left-section">
@@ -60,6 +59,7 @@
                     </ul>
                 </div>
             </footer><!-- / #FOOTER -->
+
         </div><!-- / #LAYOUT -->
     </div>
 
