--- a/src/Nosology.Web.App/pages/shared/_Main.Master
+++ b/src/Nosology.Web.App/pages/shared/_Main.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="_Main.master.cs" Inherits="Escyug.Nosology.Web.App.pages.shared._Main" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="_Main.master.cs" Inherits="Escyug.Nosology.Web.App.pages.shared._Main" EnableViewState="false" %>
 
 <!DOCTYPE html>
 
@@ -23,15 +23,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--<link rel="shortcut icon" href="images/favicon.png">-->
 
-
     <!-- general styles -->
-    <%--<link rel="stylesheet" href="../../Content/mdl-v1.0.5/material.min.css" />--%>
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
     <link rel="stylesheet" href="../../Content/jDialog/jDialog.css" />
     <link rel="stylesheet" href="../../Content/Site.css" />
-
-    
-    <%--<link rel="stylesheet" href="../../Content/modal/modal.css" />--%>
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -100,10 +95,9 @@
 
             <!-- Start #DRAWER__NAVIGATION_MENU -->
             <nav class="demo-navigation mdl-navigation">
-                <%--<form id="navigationForm" runat="server">--%>
+                
+                <form id="navigationForm" runat="server">
                     
-                    
-
                     <a class="mdl-navigation__link" href="main.aspx">
                         <i class="material-icons nav-icon" role="presentation">home</i>
                         Главная
@@ -125,7 +119,7 @@
                         Выход
                     </a>
 
-               <%-- </form>--%>
+                </form>
 
                 <div class="mdl-layout-spacer"></div>
                 <!-- search box goes here -->
@@ -152,41 +146,12 @@
 
     </div>
 
-    <!-- jQuery library -->
-    <script type="text/javascript" src="../../Scripts/jquery-1.10.2.min.js"></script>
-
-    <!-- ajax library -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-
     <!-- mdl scripts -->
-    <%--<script type="text/javascript" src="../../Content/mdl-v1.0.5/material.min.js"></script>--%>
     <script type="text/javascript" defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-
 
     <!-- dialog box -->
     <script type="text/javascript" src="../../Content/jDialog/jDialog.js"></script>
-
-    <%--<script type="text/javascript" src="../../Content/modal/modal.js"></script>--%>
-
-    <!-- shows up contact info dialog window (side menu in #HEADER) -->
-    <script type="text/javascript">
-        function showContactDialog() {
-            jDialog.alert({
-                title: '<h2><i class="fa fa-cube"></i> ООО "Эскейп-ЮГ"</h2>',
-                content: 'Тел. : (861) 257-04-14<br />Факс : (861) 257-37-97<br /> E-mail : support@escyug.ru'
-            });
-        }
-    </script>
-
-    <!-- shows up page info dialog window (side menu in #HEADER) -->
-    <script type="text/javascript">
-        function showNoticeDialog() {
-            jDialog.alert({
-                title: '<h2>Справка</h2>',
-                content: '#FILL_WITH_INFORMATION'
-            });
-        }
-    </script>
+    <script type="text/javascript" src="../../Content/jDialog/Modal.js"></script>
 
     <asp:ContentPlaceHolder ID="ScriptContentPlaceHolder" runat="server">
         <!-- particular page scripts goes here -->
