Added : UI template

--- a/src/Nosology.Web.App/Views/Home/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Home/Index.cshtml
@@ -3,4 +3,6 @@
     Layout = "~/Views/Shared/_Main.cshtml";
 }
 
-<h2> Main page title </h2>
+<div class="nos-graphs" style="padding: 10px;">
+    @Html.Raw(ViewBag.TextBlock)
+</div>
