--- a/src/Nosology.Web.App/Views/Home/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Главная страница";
+    ViewBag.Title = "Главная";
     Layout = "~/Views/Shared/_Main.cshtml";
 }
 
 <div class="nos-graphs" style="padding: 10px;">
-    @Html.Raw(ViewBag.TextBlock)
+    @Html.Raw(ViewBag.MainText)   
 </div>
