--- a/src/Nosology.Web.App/Views/Shared/_Main.cshtml
+++ b/src/Nosology.Web.App/Views/Shared/_Main.cshtml
@@ -53,7 +53,7 @@
 
             <div class="mdl-layout__header-row header-row--helper">
                 <i class="material-icons">star</i>
-                @*<span>@Model.Level</span>*@
+                <span>@Model.Level</span>
             </div>
 
         </header><!-- / #HEADER -->
@@ -66,7 +66,7 @@
                 <!-- class="nos-drawer-header" -->
                 <i class="fa fa-user-md" style="font-size: 48px"></i>
                 <br />
-                @*<span>@Model.Name</span>*@
+                <span>@Model.UserName</span>
                 <br />
 
             </header>
