Fixed : documents load in view

--- a/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
+++ b/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using Escyug.Nosology.Web.App.ViewModels
-@model IEnumerable<Document>
+@model IEnumerable<DocumentViewModel>
 
 @{
     ViewBag.Title = "Документы";
