--- a/src/Nosology.Web.App/Views/Documents/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Documents/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Escyug.Nosology.Web.App.ViewModels
-@model IEnumerable<Document>
+@model IEnumerable<DocumentViewModel>
 
 @{
     ViewBag.Title = "Документы";
