--- a/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
+++ b/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
@@ -20,7 +20,7 @@
 
                         <i class="material-icons mdl-list__item-icon ">description</i>
 
-                        <a href="#" data-link='@document.Link' onclick="getFile(this.dataset.link, 'docs')">
+                        <a href="#" data-link='@document.Link' >
                             <span>@document.Title</span>
                         </a>
 
@@ -48,3 +48,4 @@
 
 
 
+@*onclick="getFile(this.dataset.link, 'docs')"*@
