--- a/src/Nosology.Web.App/Views/Downloads/IndexPartial.cshtml
+++ b/src/Nosology.Web.App/Views/Downloads/IndexPartial.cshtml
@@ -1,20 +1,19 @@
-﻿@using Escyug.Nosology.Web.App.ViewModels
+﻿
+@using Escyug.Nosology.Web.App.ViewModels
 @model IEnumerable<FileViewModel>
 
 @{
     ViewBag.Title = "Загрузки";
-    Layout = "~/Views/Shared/_Main.cshtml";
 }
 
-
 <div class="mdl-grid nos-content">
-    
+
     @if (Model != null)
     {
         foreach (var file in Model)
         {
             <div download class="nos-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--6-col">
-                <a href="#" data-link='@file.Link' onclick="getFile(this.dataset.link, 'files')">
+                <a href="#" data-link='@file.Link' >
 
                     <i class="material-icons content-icon">@file.IconStyle</i>
 
@@ -31,3 +30,4 @@
 
 </div>
 
+@*onclick="getFile(this.dataset.link, 'files')"*@
