--- a/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
+++ b/src/Nosology.Web.App/Views/Documents/IndexPartial.cshtml
@@ -20,7 +20,7 @@
 
                         <i class="material-icons mdl-list__item-icon ">description</i>
 
-                        <a href="#" data-link='@document.Link' >
+                        <a href="@Url.Action("OpenDocument", "Documents", new { documentLink = @document.Link })" data-link='@document.Link' >
                             <span>@document.Title</span>
                         </a>
 
