--- a/src/Nosology.Web.App/Views/Downloads/IndexPartial.cshtml
+++ b/src/Nosology.Web.App/Views/Downloads/IndexPartial.cshtml
@@ -13,7 +13,7 @@
         foreach (var file in Model)
         {
             <div download class="nos-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--6-col">
-                <a href="#" data-link='@file.Link' >
+                <a href="@Url.Action("DownloadFile", "Downloads", new { fileLink= @file.Link })" data-link='@file.Link'>
 
                     <i class="material-icons content-icon">@file.IconStyle</i>
 
