--- a/src/Nosology.Web.App/Views/Downloads/Index.cshtml
+++ b/src/Nosology.Web.App/Views/Downloads/Index.cshtml
@@ -14,7 +14,7 @@
         foreach (var file in Model)
         {
             <div download class="nos-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--6-col">
-                <a href="#" data-link='@file.Link' onclick="getFile(this.dataset.link, 'files')">
+                <a href="@Url.Action("DownloadFile", "Downloads", new { fileLink= @file.Link })" data-link='@file.Link' >
 
                     <i class="material-icons content-icon">@file.IconStyle</i>
 
@@ -31,3 +31,4 @@
 
 </div>
 
+@*onclick="getFile(this.dataset.link, 'files')"*@
