--- a/src/Nosology.Web.App/Views/Shared/Error.cshtml
+++ b/src/Nosology.Web.App/Views/Shared/Error.cshtml
@@ -1,14 +1,29 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width" />
-    <title>Ошибка</title>
-</head>
-<body>
-    <hgroup>
-        <h1>Ошибка.</h1>
-        <h2>При обработке запроса произошла ошибка.</h2>
-    </hgroup>
-</body>
-</html>
+﻿
+@{
+    ViewBag.Title = "Error";
+    Layout = "~/Views/Shared/_Default.cshtml";
+}
+
+<div class="mdl-grid">
+
+    <!-- #SPACER -->
+    <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
+
+    <!-- #MAIN CELL -->
+    <div class="mdl-cell mdl-cell--10-col mdl-cell--middle">
+        <div class="login-block mdl-shadow--2dp">
+
+            <i class="material-icons mdl-color-text--nos-main login-block__icon">warning</i>
+
+            <br />
+
+            <span class="mdl-layout__title">MORE BLOOD FOR THE BLOOD GOD! MORE SKULLS FOR THE SKULL THRONE!</span>
+
+            <br />
+        </div>
+    </div>
+
+    <!-- #SPACER -->
+    <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
+
+</div>
